# distributedhardware_distributed_screen

./: CODEOWNERS  README.en.md  README.md  README_en.md  README_zh.md  bundle.json  distributedscreen.gni  hisysevent.yaml
common/: BUILD.gn
common/include/: dscreen_constants.h  dscreen_errcode.h  dscreen_hisysevent.h  dscreen_hitrace.h  dscreen_ipc_interface_code.h  dscreen_json_util.h  dscreen_log.h  dscreen_sa_process_state.h  dscreen_util.h
common/src/: dscreen_hisysevent.cpp  dscreen_json_util.cpp  dscreen_log.cpp  dscreen_sa_process_state.cpp  dscreen_util.cpp
common/test/unittest/: BUILD.gn
common/test/unittest/include/: screen_common_test.h
common/test/unittest/resource/: BUILD.gn  cfi_blocklist.txt
common/test/unittest/src/: screen_common_test.cpp
interfaces/innerkits/native_cpp/screen_sink/: BUILD.gn
interfaces/innerkits/native_cpp/screen_sink/include/: dscreen_sink_handler.h  dscreen_sink_proxy.h  idscreen_sink.h
interfaces/innerkits/native_cpp/screen_sink/include/callback/: dscreen_sink_load_callback.h
interfaces/innerkits/native_cpp/screen_sink/src/: dscreen_sink_handler.cpp  dscreen_sink_proxy.cpp
interfaces/innerkits/native_cpp/screen_sink/src/callback/: dscreen_sink_load_callback.cpp
interfaces/innerkits/native_cpp/screen_source/: BUILD.gn
interfaces/innerkits/native_cpp/screen_source/include/: dscreen_source_handler.h  dscreen_source_proxy.h  idscreen_source.h
interfaces/innerkits/native_cpp/screen_source/src/: dscreen_source_handler.cpp  dscreen_source_proxy.cpp
interfaces/innerkits/native_cpp/test/fuzztest/: BUILD.gn
sa_profile/: 4807.json  4807.xml  (+4 more)
screenhandler/: BUILD.gn
screenhandler/include/: dscreen_handler.h
screenhandler/src/: dscreen_handler.cpp
screenhandler/test/fuzztest/: BUILD.gn
screenhandler/test/fuzztest/dscreen_handler_fuzzer/: BUILD.gn  dscreen_handler_fuzzer.cpp
screenhandler/test/fuzztest/dscreenhandler_fuzzer/: BUILD.gn  dscreen_handler_fuzzer.h
screenhandler/test/fuzztest/pluginhardware_fuzzer/: BUILD.gn  pluginhardware_fuzzer.cpp  pluginhardware_fuzzer.h
screenhandler/test/fuzztest/registerpluginlistener_fuzzer/: BUILD.gn  registerpluginlistener_fuzzer.cpp  registerpluginlistener_fuzzer.h
screenhandler/test/fuzztest/unpluginhardware_fuzzer/: BUILD.gn  unpluginhardware_fuzzer.cpp  unpluginhardware_fuzzer.h
screenhandler/test/unittest/screenhandler/: BUILD.gn
screenhandler/test/unittest/screenhandler/include/: dscreen_handler_test.h
screenhandler/test/unittest/screenhandler/src/: dscreen_handler_test.cpp
services/common/test/unittest/databuffer/: BUILD.gn  data_buffer_test.cpp  data_buffer_test.h
services/common/test/unittest/decision_center/: BUILD.gn  screen_decision_center_test.cpp  screen_decision_center_test.h
services/common/test/unittest/utils/: BUILD.gn  dscreen_fwkkit_test.cpp  dscreen_fwkkit_test.h  dscreen_hidumper_test.cpp  dscreen_hidumper_test.h  dscreen_maprelation_test.cpp  video_param_test.cpp
services/screenclient/: BUILD.gn
services/screenclient/include/: screen_client.h  screen_client_common.h  screen_client_window_adapter.h
services/screenclient/src/: screen_client.cpp  screen_client_window_adapter.cpp
services/screenclient/test/unittest/: BUILD.gn
services/screenclient/test/unittest/include/: screen_client_test.h  screen_client_window_adapter_test.h
services/screenclient/test/unittest/src/: screen_client_test.cpp  screen_client_window_adapter_test.cpp
services/screendemo/: BUILD.gn  common.h  decoder_demo.cpp  decoder_demo.h  test.cpp
services/screenservice/sinkservice/: BUILD.gn  dscreensink.cfg
services/screenservice/sinkservice/dscreenservice/include/: dscreen_sink_hidumper.h  dscreen_sink_service.h  dscreen_sink_stub.h
services/screenservice/sinkservice/dscreenservice/src/: dscreen_sink_hidumper.cpp  dscreen_sink_service.cpp  dscreen_sink_stub.cpp
services/screenservice/sinkservice/screenregionmgr/include/: screenregion.h  screenregionmgr.h
services/screenservice/sinkservice/screenregionmgr/src/: screenregion.cpp  screenregionmgr.cpp
services/screenservice/sourceservice/: BUILD.gn  dscreensrc.cfg
services/screenservice/sourceservice/dscreenmgr/include/: dscreen.h  dscreen_manager.h  screen_manager_adapter.h
services/screenservice/sourceservice/dscreenmgr/src/: dscreen.cpp  dscreen_manager.cpp  screen_manager_adapter.cpp
services/screenservice/sourceservice/dscreenservice/include/: dscreen_source_hidumper.h  dscreen_source_service.h  dscreen_source_stub.h
services/screenservice/sourceservice/dscreenservice/src/: dscreen_source_hidumper.cpp  dscreen_source_service.cpp  dscreen_source_stub.cpp
services/screenservice/test/fuzztest/sinkservice_fuzzer/: BUILD.gn  sink_service_fuzzer.cpp  sink_service_fuzzer.h
services/screentransport/screensinktrans/: BUILD.gn
services/screentransport/screensinktrans/include/: iscreen_sink_trans.h  screen_sink_trans.h
services/screentransport/screensinktrans/src/: screen_sink_trans.cpp
services/screentransport/test/fuzztest/screensinkprocessor_fuzzer/: BUILD.gn  screen_sink_processor_fuzzer.cpp  screen_sink_processor_fuzzer.h
services/screentransport/test/fuzztest/screensourcetrans_fuzzer/: BUILD.gn  screen_source_trans_fuzzer.cpp  screen_source_trans_fuzzer.h
services/screentransport/test/unittest/screendatachannel/: BUILD.gn
services/screentransport/test/unittest/screensinkprocessor/: BUILD.gn
services/screentransport/test/unittest/screensinktrans/: BUILD.gn
services/screentransport/test/unittest/screentranstestutils/: BUILD.gn
services/softbusadapter/test/fuzztest/softbusadapter_fuzzer/: BUILD.gn  mock_socket.cpp  softbus_adapter_fuzzer.cpp  softbus_adapter_fuzzer.h  softbusadapter_fuzzer.cpp  softbusadapter_fuzzer.h
services/softbusadapter/test/unittest/: BUILD.gn
services/softbusadapter/test/unittest/include/: device_manager_impl_mock.h  mock_other_method.h  socket_mock.h  softbus_adapter_test.h
services/softbusadapter/test/unittest/src/: device_manager_impl_mock.cpp  mock_other_method.cpp  socket_mock.cpp  softbus_adapter_test.cpp  softbus_permission_check_test.cpp
(+298 files in other folders)
