# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

distributedscreen_path = "//foundation/distributedhardware/distributed_screen"
distributedhardwarefwk_path =
    "//foundation/distributedhardware/distributed_hardware_fwk"
windowmanager_path = "//foundation/window/window_manager"
mediastandard_path = "//foundation/multimedia/player_framework"
driver_path = "//drivers/peripheral/display"
ipc_path = "//foundation/communication/ipc"
common_path = "${distributedscreen_path}/common"
services_path = "${distributedscreen_path}/services"
interfaces_path = "${distributedscreen_path}/interfaces"
fwk_utils_path = "${distributedhardwarefwk_path}/utils"
fwk_common_path = "${distributedhardwarefwk_path}/common"
fwk_services_path = "${distributedhardwarefwk_path}/services"
fwk_interfaces_path = "${distributedhardwarefwk_path}/interfaces"
ipc_interfaces_path = "${ipc_path}/interfaces"
build_flags = [ "-Werror" ]

declare_args() {
  distributed_screen_common = true
}
