# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

distributedscreen_path = "//foundation/distributedhardware/distributed_screen"
fuzz_test_path = "distributed_screen/distributed_screen"
common_path = "${distributedscreen_path}/common"
services_path = "${distributedscreen_path}/services"
interfaces_path = "${distributedscreen_path}/interfaces"

declare_args() {
  need_same_account = true
  if (!defined(global_parts_info) || !defined(
          global_parts_info.distributedhardware_distributed_hardware_adapter)) {
    need_same_account = false
  }
}