# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributed_screen/distributedscreen.gni")

ohos_shared_library("distributed_screen_handler") {
  include_dirs = [
    "//third_party/json/include",
    "${windowmanager_path}/interfaces/innerkits/dm",
    "${mediastandard_path}/interfaces/inner_api/native",
    "${fwk_common_path}/utils/include",
  ]

  include_dirs += [
    "include",
    "${common_path}/include",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_base/include",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/base",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//foundation/graphic/graphic_2d/utils/buffer_handle/export",
  ]

  sources = [ "src/dscreen_handler.cpp" ]

  deps = [
    "${common_path}:distributed_screen_utils",
    "${mediastandard_path}/interfaces/inner_api/native:media_client",
    "${windowmanager_path}/dm:libdm",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"dscreenhandler\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [ "c_utils:utils" ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_screen"
}
