# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributed_screen/distributedscreen.gni")

ohos_shared_library("distributed_screen_client") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }
  stack_protector_ret = true
  include_dirs = [
    "${windowmanager_path}/interfaces/innerkits/wm",
    "${fwk_common_path}/utils/include",
  ]

  include_dirs += [
    "include",
    "${common_path}/include",
  ]

  sources = [
    "${services_path}/screenclient/src/screen_client.cpp",
    "${services_path}/screenclient/src/screen_client_window_adapter.cpp",
  ]

  deps = [ "${common_path}:distributed_screen_utils" ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"dscreenclient\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "graphic_2d:libgraphic_utils",
    "graphic_2d:librender_service_client",
    "graphic_2d:surface",
    "input:libmmi-client",
    "window_manager:libwm",
  ]

  part_name = "distributed_screen"
  subsystem_name = "distributedhardware"
}
