# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributed_screen/distributedscreen.gni")

ohos_executable("distributedScreenTest") {
  install_enable = false

  include_dirs = [
    "${services_path}/common/utils/include",
    "${interfaces_path}/innerkits/native_cpp/screen_sink/include",
    "${interfaces_path}/innerkits/native_cpp/screen_source/include",
    "${interfaces_path}/innerkits/native_cpp/screen_source/include/callback",
    "${fwk_common_path}/utils/include",
    "${windowmanager_path}/interfaces/innerkits/dm",
    "${services_path}/screenclient/include",
    "${windowmanager_path}/interfaces/innerkits/wm",
    "${common_path}/include",
    "//base/security/access_token/interfaces/innerkits/nativetoken/include/",
    "//base/security/access_token/interfaces/innerkits/token_setproc/include/",
  ]

  include_dirs +=
      [ "foundation/multimedia/player_framework/interfaces/inner_api/native" ]

  sources = [
    "./decoder_demo.cpp",
    "./test.cpp",
  ]

  deps = [
    "${common_path}:distributed_screen_utils",
    "${interfaces_path}/innerkits/native_cpp/screen_sink:distributed_screen_sink_sdk",
    "${interfaces_path}/innerkits/native_cpp/screen_source:distributed_screen_source_sdk",
    "${services_path}/screenclient:distributed_screen_client",
    "${windowmanager_path}/dm:libdm",
    "${windowmanager_path}/wm:libwm",
    "//base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
    "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
    "//foundation/communication/dsoftbus/adapter:softbus_adapter",
    "//foundation/communication/dsoftbus/sdk:softbus_client",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedScreenTest\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "multimedia_player_framework:media_client",
  ]

  cflags = [ "-Wall" ]
  cflags_cc = cflags

  part_name = "distributed_screen"
  subsystem_name = "distributedhardware"
}
