# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../distributedscreen.gni")

ohos_executable("distributedScreenTest") {
  install_enable = false

  include_dirs = [
    "${services_path}/common/utils/include",
    "${interfaces_path}/innerkits/native_cpp/screen_sink/include",
    "${interfaces_path}/innerkits/native_cpp/screen_source/include",
    "${interfaces_path}/innerkits/native_cpp/screen_source/include/callback",
    "${fwk_common_path}/utils/include",
    "${services_path}/screenclient/include",
    "${common_path}/include",
  ]

  sources = [
    "./decoder_demo.cpp",
    "./test.cpp",
  ]

  deps = [
    "${common_path}:distributed_screen_utils",
    "${interfaces_path}/innerkits/native_cpp/screen_sink:distributed_screen_sink_sdk",
    "${interfaces_path}/innerkits/native_cpp/screen_source:distributed_screen_source_sdk",
    "${services_path}/screenclient:distributed_screen_client",
    "${graphicstandard_path}/rosen/modules/render_service_client:librender_service_client",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedScreenTest\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "dsoftbus:softbus_client",
    "graphic_standard:surface",
    "hiviewdfx_hilog_native:libhilog",
    "multimedia_player_framework:media_client",
    "samgr:samgr_proxy",
    "window_manager:libdm",
    "window_manager:libwm",
  ]

  cflags = [ "-Wall" ]
  cflags_cc = cflags

  part_name = "distributed_screen"
  subsystem_name = "distributedhardware"
}
