# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_screen/distributedscreen.gni")

module_out_path = "distributed_screen/screen_common_test"

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "./include",
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
    "${common_path}/include",
    "//foundation/communication/dsoftbus/interfaces/kits/bus_center",
  ]
}

## UnitTest screen_common_test
ohos_unittest("ScreenCommonTest") {
  module_out_path = module_out_path

  sources = [
    "${common_path}/src/dscreen_hisysevent.cpp",
    "${common_path}/src/dscreen_log.cpp",
    "${common_path}/src/dscreen_sa_process_state.cpp",
    "${common_path}/src/dscreen_util.cpp",
    "${common_path}/test/unittest/src/screen_common_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [ "${common_path}:distributed_screen_utils" ]
  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"dscreencommontest\"",
    "LOG_DOMAIN=0xD004100",
  ]
  external_deps = [
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}
