# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributed_screen/distributedscreen.gni")

ohos_shared_library("distributed_screen_sink") {
  include_dirs = [
    "//third_party/json/include",
    "${fwk_common_path}/utils/include",
    "${distributedhardwarefwk_path}/interfaces/inner_kits/include",
  ]

  include_dirs += [
    "./dscreenservice/include",
    "${services_path}/screenservice/sinkservice/screenregionmgr",
    "${interfaces_path}/innerkits/native_cpp/screen_sink/include",
    "${interfaces_path}/innerkits/native_cpp/screen_sink/include/callback",
    "${interfaces_path}/innerkits/native_cpp/screen_source/include",
    "${interfaces_path}/innerkits/native_cpp/screen_source/include/callback",
    "${common_path}/include",
    "${services_path}/common/utils/include",
    "${services_path}/common/databuffer/include",
    "${services_path}/common/screen_channel/include",
    "${services_path}/screentransport/screensinktrans/include",
    "${services_path}/screentransport/screensinkprocessor/include",
    "${services_path}/screentransport/screensinkprocessor/decoder/include",
    "${services_path}/screenclient/include/",
  ]

  sources = [
    "${interfaces_path}/innerkits/native_cpp/screen_sink/src/dscreen_sink_proxy.cpp",
    "${interfaces_path}/innerkits/native_cpp/screen_source/src/dscreen_source_proxy.cpp",
    "${services_path}/common/utils/src/dscreen_fwkkit.cpp",
    "${services_path}/common/utils/src/dscreen_maprelation.cpp",
    "${services_path}/common/utils/src/video_param.cpp",
    "./dscreenservice/src/dscreen_sink_service.cpp",
    "./dscreenservice/src/dscreen_sink_stub.cpp",
    "./screenregionmgr/1.0/src/screenregion.cpp",
    "./screenregionmgr/1.0/src/screenregionmgr.cpp",
    "./screenregionmgr/2.0/src/av_receiver_engine_adapter.cpp",
    "./screenregionmgr/2.0/src/screenregion.cpp",
    "./screenregionmgr/2.0/src/screenregionmgr.cpp",
  ]

  deps = [
    "${common_path}:distributed_screen_utils",
    "${services_path}/screenclient:distributed_screen_client",
    "${services_path}/screentransport/screensinktrans:distributed_screen_sinktrans",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"dscreensink\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:distributed_av_receiver",
    "distributed_hardware_fwk:libdhfwk_sdk",
    "graphic_2d:libgraphic_utils",
    "graphic_2d:surface",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "window_manager:libdm",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_screen"
}
